<resources>
    <string name="app_name">NoteBook</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">Enter your title here</string>
    <string name="title">NoteBook</string>
    <string name="note_hint">Type your note here...</string>
    <string name="save">Save Note</string>
    <string name="welcome_btn">Click to add notes.</string>
    <string name="title_activity_newscreen">NewscreenActivity</string>

    <string name="title_id">Title</string>
    <string name="category">Category</string>
    <string name="desc">Description</string>
    <string-array name="note_category">
        <item>Personal</item>
        <item>Official</item>
        <item>Education</item>
        <item>Government</item>
        <item>Others...</item>
    </string-array>
    <string name="title_activity_note_detail">NoteDetailActivity</string>

    <string name="alttitle">Delete</string>
    <string name="delete_text">Do you really want to delete this note???</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="count">Count</string>

</resources>
