<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewscreenActivity"
    tools:showIn="@layout/newscreen">

    <TextView
        android:id="@+id/titleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="30dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/title_hintID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/title_hint"
        android:inputType="text"


         />
    <Spinner
        android:id="@+id/spinID"
        android:entries="@array/note_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <EditText
        android:id="@+id/note_hintID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/note_hint"
        android:inputType="text"

         />

    <Button
        android:id="@+id/saveID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/save"
        />

</LinearLayout>