
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:layout_marginVertical="5dp"



 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        >


    <TextView
        android:id="@+id/notetitleID"
        android:layout_width="match_parent"
        android:textSize="24dp"
        android:textColor="@color/Blue"
        android:layout_height="wrap_content"
        android:text="@string/title_id" />

    <TextView
        android:id="@+id/notecategoryID"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textColor="@color/Brown"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/notedescID"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"

        android:text="@string/desc" />

    </LinearLayout>


</android.support.v7.widget.CardView>
